styles/uc-safety.css
/* UC Safety - EDS overlay fixes */

/* Self-hosted Montserrat fonts */
@font-face { font-family: 'Montserrat'; src: url('/fonts/Montserrat-Regular.ttf') format('truetype'); font-weight: 400; font-display: swap; }
@font-face { font-family: 'Montserrat'; src: url('/fonts/Montserrat-Bold.ttf') format('truetype'); font-weight: 700; font-display: swap; }
@font-face { font-family: 'Montserrat'; src: url('/fonts/Montserrat-SemiBold.ttf') format('truetype'); font-weight: 600; font-display: swap; }
@font-face { font-family: 'Montserrat'; src: url('/fonts/Montserrat-Medium.ttf') format('truetype'); font-weight: 500; font-display: swap; }
@font-face { font-family: 'MontserratRegular'; src: url('/fonts/Montserrat-Regular.ttf') format('truetype'); font-weight: normal; font-display: swap; }
@font-face { font-family: 'MontserratBold'; src: url('/fonts/Montserrat-Bold.ttf') format('truetype'); font-weight: normal; font-display: swap; }
@font-face { font-family: 'MontserratSemiBold'; src: url('/fonts/Montserrat-SemiBold.ttf') format('truetype'); font-weight: normal; font-display: swap; }
@font-face { font-family: 'MontserratMedium'; src: url('/fonts/Montserrat-Medium.ttf') format('truetype'); font-weight: normal; font-display: swap; }
@font-face { font-family: 'MontserratExtraBold'; src: url('/fonts/Montserrat-ExtraBold.ttf') format('truetype'); font-weight: normal; font-display: swap; }

body > header, body > footer { display: none !important; }
main { display: block !important; }
.isi-rendering.aem-GridColumn { display: none !important; }
.refrence-section { display: none !important; }
.refrence-section.safety { display: block !important; }
.refrence-section.homePage { display: none !important; }
#common-pgcont .column-control .column-control .col { padding-left: 0 !important; padding-right: 0 !important; }
@media (min-width: 992px) { .d-lg-block { display: block !important; } .d-lg-none { display: none !important; } }
.flx-ban { display: flex !important; }
.banner-info.ucs_home { padding: 0; }

/* Hide indication modal by default */
#indication_modal { display: none !important; }
/* Indications popup hidden - no source JS to toggle */


/* Hide HCP entry modal overlay - blocks all clicks */
#entryModal, .cmp-modal.entry-modal { display: none !important; }

